fix grammar on index and fix mobile menu z-index on schedule pg

--- a/scss/_schedule.scss
+++ b/scss/_schedule.scss
@@ -1,7 +1,8 @@
 .schedulebody{
     opacity: 0.7;
     margin: 0;
-
+  z-index: -1;
+  position: relative;
 }
     
     .scheduleboard{
